# text-mining

./: .gitignore  ChangeLog.md  README.md  package.yaml  text-mining.cabal
logo/: Makefile
src/Text/Mining/: Diacritics.hs  Stemming.hs  StopWords.hs
src/Text/Mining/Sentiment/: Emotion.hs  Polarity.hs
src/Text/Mining/Stemming/: Common.hs  English.hs  Spanish.hs
test/Text/Mining/: StemmingSpec.hs  StopWordsSpec.hs
test/Text/Mining/Stemming/: CommonSpec.hs  SpanishSpec.hs
