cabal-version: 1.12

name:           text-mining
version:        0.1.0.0
synopsis:       Basic Text Mining
description:    Please see the README on GitHub at <https://github.com/alx741/text-mining#readme>
category:       Text, Machine Learning
homepage:       https://github.com/alx741/text-mining#readme
bug-reports:    https://github.com/alx741/text-mining/issues
author:         Daniel Campoverde
maintainer:     alx@sillybytes.net
copyright:      2019 Daniel Campoverde
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/alx741/text-mining

library
  exposed-modules:
      Text.Mining.Diacritics
      Text.Mining.Sentiment.Emotion
      Text.Mining.Sentiment.Polarity
      Text.Mining.Stemming.Common
      Text.Mining.Stemming.English
      Text.Mining.Stemming.Spanish
      Text.Mining.StopWords
  other-modules:
      Paths_text_mining
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , probability
    , safe
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010

test-suite text-mining-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Text.Mining.Stemming.CommonSpec
      Text.Mining.Stemming.SpanishSpec
      Text.Mining.StopWordsSpec
      Paths_text_mining
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , hspec
    , probability
    , safe
    , text
    , text-mining
    , unordered-containers
    , vector
  default-language: Haskell2010
